<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ComandApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Nombre">Drunken Duck</string>
    <string name="Telefono">123456789</string>
    <string name="Direccion">C/Imaginaria Nº1</string>
    <string name="Correo">asduas@correo.es</string>
    <string name="Provincia">Guadalupe</string>
    <string name="Municipio">Micasa</string>
    <string name="nombre">Escribe tu nombre:</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_saludo">SaludoActivity</string>
    <string name="title_activity_busqueda_bar">Locales disponibles</string>
    <string name="title_activity_inicio_bar">Informacion del local</string>
    <string name="search_title">Buscar</string>
    <string name="search_hint">Nombre bar</string>

    <string name="title_activity_genera_comanda">Comanda generada</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_bar">maps_bar</string>
    <string name="title_activity_bares_favoritos">Locales favoritos</string>
    <string name="title_activity_carta_bar">Carta del localr</string>
    <string name="title_activity_ofertas">Ofertas del local</string>
	
	<string name="title_activity_comanda_detallada">Detalles de la comanda</string>
    <string name="title_activity_mapa_ylocalizacion">Mapa</string>
    <string name="title_activity_historial_comandas">Historial de comandas</string>
    <string name="title_activity_splash">Comandapp</string>
</resources>
