<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Inicio"
            android:id="@+id/btnMenuInicio"
            android:background="@drawable/boton_selec"
            android:layout_weight=".25"
            android:textSize="16dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Carta"
            android:id="@+id/btnMenuCarta"
            android:background="#ffff9615"
            android:layout_weight=".25"
            android:textSize="16dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ofertas"
            android:id="@+id/btnMenuOfertas"
            android:background="#ffff9615"
            android:layout_weight=".25"
            android:textSize="16dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comanda"
            android:id="@+id/btnMenuComanda"
            android:background="#ffff9615"
            android:layout_weight=".25"
            android:textSize="16dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:id="@+id/imageViewBar"
                android:src="@drawable/logo_comandapp"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp" />
            
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:layout_marginBottom="15dp" />

            <TextView android:id="@+id/textView1"
                android:text="@string/Nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                android:textSize="20sp" />


            <TextView android:id="@+id/textView2"
                android:text="@string/Telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="20sp" />


            <TextView android:id="@+id/textView3"
                android:text="@string/Direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />


            <TextView android:id="@+id/textView4"
                android:text="@string/Provincia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />


            <TextView android:id="@+id/textView5"
                android:text="@string/Municipio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <TextView android:id="@+id/textView6"
                android:text="@string/Correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Favorito"
                    android:id="@+id/textView"
                    android:textSize="20sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/SwitchFavorito"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Ver en mapa"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                style="@style/botonCustom"
                android:layout_marginBottom="10dp"
                android:onClick="clickBoton" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>